[gd_scene load_steps=15 format=3 uid="uid://lgvewjetgk0v"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu.gd" id="1_3lf01"]
[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_5xlqd"]
[ext_resource type="Theme" uid="uid://cyenx03si47ju" path="res://entities/prefabs/menus.tres" id="1_r8y2f"]
[ext_resource type="Texture2D" uid="uid://yg7560xh185w" path="res://assets/art/HUD/heart-drop.svg" id="2_q82at"]
[ext_resource type="Script" path="res://scripts/menus/options.gd" id="2_vh8js"]
[ext_resource type="Texture2D" uid="uid://ho73m0e56d7b" path="res://assets/art/HUD/tentacle-heart.svg" id="3_40hk2"]
[ext_resource type="Script" path="res://scripts/menus/weapon_select.gd" id="4_tsyyj"]
[ext_resource type="Script" path="res://scripts/menus/upgrade_select.gd" id="8_3h43c"]
[ext_resource type="Texture2D" uid="uid://cd36xmwbrykp5" path="res://assets/art/weapons/winchester-rifle.svg" id="9_j1och"]
[ext_resource type="Texture2D" uid="uid://bldmra6g72sc0" path="res://assets/art/weapons/sawed-off-shotgun.svg" id="10_4htge"]
[ext_resource type="Script" path="res://scripts/menus/HUD.gd" id="10_6itlc"]
[ext_resource type="Texture2D" uid="uid://ih6148xt7g3m" path="res://assets/art/weapons/panzerfaust.svg" id="11_tsnp5"]

[sub_resource type="Shader" id="Shader_6n7ca"]
code = "shader_type canvas_item;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	COLOR.rgb = texture(TEXTURE, UV).rgb * 0.5;
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ilqlc"]
shader = SubResource("Shader_6n7ca")

[node name="Menus" type="CanvasLayer"]

[node name="HUD" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("10_6itlc")

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="HUD/VBoxContainer"]
layout_mode = 2

[node name="Hearts" type="TextureRect" parent="HUD/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_q82at")
expand_mode = 1
stretch_mode = 1

[node name="MaxHearts" type="TextureRect" parent="HUD/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("3_40hk2")
expand_mode = 1
stretch_mode = 1

[node name="Upgrades" type="HBoxContainer" parent="HUD/VBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ilqlc")
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="MainMenu" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_r8y2f")
script = ExtResource("1_5xlqd")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartGame" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Start Game"

[node name="Options" type="Button" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Options"

[node name="PauseMenu" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_r8y2f")
script = ExtResource("1_3lf01")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Restart" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Restart"

[node name="Upgrades" type="Button" parent="PauseMenu/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Upgrades"

[node name="Options" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Options"

[node name="MainMenu" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Main Menu"

[node name="Options" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_r8y2f")
script = ExtResource("2_vh8js")

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 2

[node name="Volume" type="PanelContainer" parent="Options/VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Options/VBoxContainer/Volume"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Options/VBoxContainer/Volume/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Volume"

[node name="HSeparator" type="HSeparator" parent="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Master"

[node name="Master" type="HSlider" parent="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="Label2" type="Label" parent="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Music"

[node name="Music" type="HSlider" parent="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="Label3" type="Label" parent="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Sounds"

[node name="Sounds" type="HSlider" parent="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="WeaponSelect" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_r8y2f")
script = ExtResource("4_tsyyj")

[node name="PanelContainer" type="PanelContainer" parent="WeaponSelect"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponSelect/PanelContainer"]
layout_mode = 2

[node name="MarginContainerText" type="MarginContainer" parent="WeaponSelect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="Label" type="Label" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainerText"]
layout_mode = 2
size_flags_vertical = 0
text = "Corruption has taken hold of the mining tool. Which path will you choose for it?"

[node name="MarginContainer" type="MarginContainer" parent="WeaponSelect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Rifle" type="Button" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Rifle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Rifle/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Rifle/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("9_j1och")
expand_mode = 5
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Rifle/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Rifle/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Longshot"
horizontal_alignment = 1

[node name="Shotgun" type="Button" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Shotgun"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Shotgun/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Shotgun/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("10_4htge")
expand_mode = 5
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Shotgun/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Shotgun/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Scattered"
horizontal_alignment = 1

[node name="Explosive" type="Button" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Explosive"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Explosive/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Explosive/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("11_tsnp5")
expand_mode = 5
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Explosive/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Explosive/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Explosive"
horizontal_alignment = 1

[node name="UpgradeSelect" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_r8y2f")
script = ExtResource("8_3h43c")

[node name="PanelContainer" type="PanelContainer" parent="UpgradeSelect"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeSelect/PanelContainer"]
layout_mode = 2

[node name="MarginContainerText2" type="MarginContainer" parent="UpgradeSelect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="Label" type="Label" parent="UpgradeSelect/PanelContainer/VBoxContainer/MarginContainerText2"]
layout_mode = 2
size_flags_vertical = 0
text = "The corruption grows ever stronger... How will  you guide its evolution?"

[node name="MarginContainer" type="MarginContainer" parent="UpgradeSelect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="CenterContainer" parent="UpgradeSelect/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UpgradeSelect/PanelContainer/VBoxContainer/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(940, 400)
layout_mode = 2

[node name="UpgradeList" type="GridContainer" parent="UpgradeSelect/PanelContainer/VBoxContainer/MarginContainer/CenterContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[connection signal="pressed" from="MainMenu/VBoxContainer/StartGame" to="MainMenu" method="_on_start_game_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Options" to="MainMenu" method="_on_options_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Restart" to="PauseMenu" method="_on_restart_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Upgrades" to="PauseMenu" method="_on_upgrades_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Options" to="PauseMenu" method="_on_options_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/MainMenu" to="PauseMenu" method="_on_main_menu_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer/Master" to="Options" method="_on_master_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer/Music" to="Options" method="_on_music_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/Volume/MarginContainer/VBoxContainer/Sounds" to="Options" method="_on_sounds_value_changed"]
[connection signal="pressed" from="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Rifle" to="WeaponSelect" method="_on_rifle_pressed"]
[connection signal="pressed" from="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Shotgun" to="WeaponSelect" method="_on_shotgun_pressed"]
[connection signal="pressed" from="WeaponSelect/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Explosive" to="WeaponSelect" method="_on_explosive_pressed"]
